src/objects/CurrencyRate__c.object
<CustomObject>
    <fields>
        <fullName>BaseCurrency__c</fullName>
        <label>Base Currency</label>
        <length>3</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rate__c</fullName>
        <label>Rate</label>
        <precision>18</precision>
        <required>true</required>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ToCurrency__c</fullName>
        <label>To Currency</label>
        <length>3</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Currency Rate</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Currency Rates Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Currency Rates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>